# PINN

./: .gitignore  PINN.cabal  Presentation.pptx  README.md  constants.py  cuda.py  duffing.py  main.py  model.py  plotting.py  requirements.txt
app/: CauchyProblem.hs  Main.hs  PINN.hs  Plotting.hs  Task.hs
app/CauchyProblem/: NumericalMethods.hs  Times.hs
app/CauchyProblem/NumericalMethods/: ErrorTests.hs  Methods.hs
app/PINN/: DifferentiableFns.hs  Differentiation.hs  Model.hs  Optimiser.hs  Optimisers.hs  Testing.hs  Training.hs
data/: PINN  oscillator_model1
