cabal-version:      3.0
name:               PINN
version:            0.1.0.0
synopsis:
    This project attempts to solve Duffing equation using PINN and numerical methods.

license:            MIT
license-file:       LICENSE
author:             JktuJQ
maintainer:         odmamontov@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable PINN
    import:           warnings
    main-is:          Main.hs
    other-modules: CauchyProblem,
                   CauchyProblem.Times,
                   CauchyProblem.NumericalMethods,
                   CauchyProblem.NumericalMethods.Methods,
                   CauchyProblem.NumericalMethods.ErrorTests,

                   Task,

                   Plotting,

                   PINN,
                   PINN.Model
    
    build-depends:    base ^>= 4.17.2.1,
                      vector,
                      matrix,
                      easyplot >= 1.0 && < 1.1
    hs-source-dirs:   app
    default-language: Haskell2010
